# claude-code-container

./: .gitattributes  .gitignore  .mcp.json  .npmignore  CLAUDE.md  CONTRACTS.md  CONTRIBUTING.md  Containerfile  Dockerfile  LICENSE  README.md  eslint.config.js  mise.toml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/: settings.json
.github/workflows/: chrome-devtools-test.yml  ci.yml  docker.yml  npm.yml  release.yml
device-lab-mcp/: package-lock.json  package.json  server.mjs
doc/: llamacpp.md  mise-environments.md
doc/common/: CLAUDE.md  (+10 more)
scripts/: ccc-entrypoint.sh  ccc-x11-bridge  clipboard-helper-darwin.m  determine-npm-tag.js  generate-tauri-ico.mjs  google-chrome  install.js  setup-chrome-extension.sh  start-vnc  ui-toolchain.js
src/: clean.ts  clipboard-server.ts  codex-clipboard-image.ts  container-runtime.ts  container-setup.ts  credentials.ts  device-lab-admin.ts  device-lab-broker.ts  docker.ts  doctor.ts  index.ts  iptables-retry.ts  localhost-proxy-setup.ts  localhost-proxy.ts  mcp-forward.ts  network-reach.ts  profile.ts  registry.ts  remote.ts  scanner.ts  session.ts  tool-detect.ts  tool-registry.ts  ui-launcher.ts  utils.ts  worktree.ts
ui/: HANDOFF.md  HANDOFF.meta.json  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
ui/src-tauri/: Cargo.toml  HANDOFF.md  HANDOFF.meta.json  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs  notify.rs  pty.rs  session_events.rs  session_history.rs
x11-mcp/: package-lock.json  package.json  server.mjs
(+142 files in other folders)
